@@ -531,11 +531,14 @@ class InvoiceTestCase(BrickTestCaseMixin, _BillingTestCase):
 
         with self.assertNoException():
             form = context['form']
+            status_f = form.fields['status']
 
         self.assertDictEqual(
-            {'status': 1, self.TARGET_KEY: target},
+            # {'status': 1, self.TARGET_KEY: target},
+            {self.TARGET_KEY: target},
             form.initial,
         )
+        self.assertEqual(1, status_f.initial)
 
         # ---
         name = 'Invoice#1'
