@@ -145,6 +145,7 @@ class QuoteTestCase(BrickTestCaseMixin, _BillingTestCase):
             fields = form.fields
             source_f = fields[self.SOURCE_KEY]
             number_f = fields['number']
+            status_f = fields['status']
 
         self.assertEqual(managed_orga, source_f.initial)
         self.assertFalse(number_f.required)
@@ -155,7 +156,8 @@ class QuoteTestCase(BrickTestCaseMixin, _BillingTestCase):
             ).format(software='My CRM', organisation=managed_orga),
             number_f.help_text,
         )
-        self.assertEqual(default_status.id, form.initial.get('status'))
+        # self.assertEqual(default_status.id, form.initial.get('status'))
+        self.assertEqual(default_status.id, status_f.initial)
 
         # ---
         terms = SettlementTerms.objects.all()[0]
@@ -182,7 +184,8 @@ class QuoteTestCase(BrickTestCaseMixin, _BillingTestCase):
         status = QuoteStatus.objects.create(name='OK', is_default=True)
 
         response1 = self.assertGET200(reverse('billing__create_quote'))
-        self.assertEqual(status.id, response1.context['form'].initial.get('status'))
+        # self.assertEqual(status.id, response1.context['form'].initial.get('status'))
+        self.assertEqual(status.id, response1.context['form'].fields['status'].initial)
 
         # ---
         source, target1 = self.create_orgas(user=user)
@@ -288,14 +291,16 @@ class QuoteTestCase(BrickTestCaseMixin, _BillingTestCase):
 
         with self.assertNoException():
             form = context['form']
+            status_f = form.fields['status']
 
         self.assertDictEqual(
             {
-                'status': default_status.id,
+                # 'status': default_status.id,
                 self.TARGET_KEY: target,
             },
             form.initial,
         )
+        self.assertEqual(default_status.id, status_f.initial)
 
         # ---
         name = 'Quote#1'
@@ -341,7 +346,8 @@ class QuoteTestCase(BrickTestCaseMixin, _BillingTestCase):
         response = self.assertGET200(
             reverse('billing__create_related_quote', args=(target.id,)),
         )
-        self.assertEqual(status.id, response.context['form'].initial.get('status'))
+        # self.assertEqual(status.id, response.context['form'].initial.get('status'))
+        self.assertEqual(status.id, response.context['form'].fields['status'].initial)
 
     def test_create_related__creation_credentials(self):
         "Creation creds are needed."
