@@ -139,11 +139,14 @@ class SalesOrderTestCase(BrickTestCaseMixin, _BillingTestCase):
 
         with self.assertNoException():
             form = context['form']
+            status_f = form.fields['status']
 
         self.assertDictEqual(
-            {'status': 1, self.TARGET_KEY: target},
+            # {'status': 1, self.TARGET_KEY: target},
+            {self.TARGET_KEY: target},
             form.initial,
         )
+        self.assertEqual(1, status_f.initial)
 
         # ---
         name = 'Order#1'
