@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2021  Hybird
+#    Copyright (C) 2009-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -30,7 +30,8 @@ SalesOrder = billing.get_sales_order_model()
 Invoice = billing.get_invoice_model()
 
 
-class SalesOrderCreation(base.BaseCreation):
+# class SalesOrderCreation(base.BaseCreation):
+class SalesOrderCreation(generic.EntityCreation):
     model = SalesOrder
     form_class = custom_forms.ORDER_CREATION_CFORM
 
